# planpal-backend

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
migrations/: 20240101_000001_initial.sql  20260430000001_profile_fields.sql  20260430000002_public_holidays.sql  20260430000003_holiday_configs.sql  20260505000001_meeting_extensions.sql  20260507000001_rsvp_and_notification_types.sql  20260512000001_notification_read.sql  20260515000001_ai_chat.sql  20260518000001_gcal_event_mapping.sql  20260518000002_gcal_watch_channels.sql
scripts/: artifact.sh
src/: config.rs  error.rs  lib.rs  logging.rs  worker.rs
src/adapter/: mod.rs
src/adapter/rest/: admin.rs  admin_holidays.rs  admin_users.rs  ai_chat.rs  auth.rs  calendars.rs  health.rs  logger.rs  meetings.rs  mod.rs  notifications.rs  users.rs
src/adapter/slack/: commands.rs  mod.rs  webhook.rs
src/ai/: anthropic.rs  bedrock.rs  deepseek.rs  mod.rs  prompt.rs
src/auth/: google_oauth.rs  jwt.rs  middleware.rs  mod.rs  password.rs
src/db/: mod.rs  postgres.rs
src/model/: ai_chat.rs  calendar.rs  holiday.rs  meeting.rs  mod.rs  notification.rs  session.rs  user.rs
src/notification/: email.rs  push.rs
src/provider/: gcal.rs  ical.rs  local.rs  mod.rs
src/queue/: mod.rs  nats.rs
src/queue/jobs/: mod.rs  process_ai_chat.rs  schedule_meeting.rs  send_notification.rs  sync_calendar.rs
src/repository/: ai_chat_repo.rs  calendar_repo.rs  event_repo.rs  gcal_mapping_repo.rs  holiday_repo.rs  meeting_repo.rs  mod.rs  notification_repo.rs  user_repo.rs
src/scheduler/: free_busy.rs  mod.rs  suggest.rs
src/secrets/: aws.rs  env_secrets.rs  mock.rs  mod.rs  vault.rs
src/telemetry/: metrics.rs  middleware.rs  mod.rs  profiling.rs  tracing.rs
