[package]
name = "planpal-backend"
version = "0.1.0"
edition = "2021"

[features]
# Enable continuous CPU profiling via Pyroscope / Grafana Cloud Profiles.
# Excluded from the default feature set so that `cargo test` (and CI test
# steps) never compile pyroscope_pprofrs / pprof-rs, which add ~800 MB of
# peak RSS due to C/protobuf compilation and linking.
# Release binaries are built with `--features profiling`.
profiling = ["dep:pyroscope", "dep:pyroscope_pprofrs"]

[[bin]]
name = "planpal-server"
path = "src/bin/server.rs"

[[bin]]
name = "planpal-schedule-worker"
path = "src/bin/schedule_worker.rs"

[[bin]]
name = "planpal-notification-worker"
path = "src/bin/notification_worker.rs"

[[bin]]
name = "planpal-ai-worker"
path = "src/bin/ai_worker.rs"

[[bin]]
name = "seed_admin"
path = "src/bin/seed_admin.rs"

[lib]
name = "planpal"
path = "src/lib.rs"

[dependencies]
# Secret management
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"

# Web framework
actix-web = "4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database – async PostgreSQL (replaces blocking `postgres = "0.19"`)
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration & env loading
config = "0.14"
dotenvy = "0.15"

# HTTP client (Google Calendar API, FCM, iCal fetch, OAuth token exchange)
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Email
# this one is for SMTP
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "hostname", "pool", "smtp-transport"] }
# this one is using AWS SDK (right now the jakarta region didn't support SMTP Settings)
aws-sdk-sesv2 = "1.1"

# AI — Amazon Bedrock (Claude Haiku for chat-based scheduling)
aws-sdk-bedrockruntime = "1"


# Message queue
async-nats = "0.33"

# Error handling
thiserror = "1"
anyhow = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# IDs & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# iCal parsing
icalendar = "0.16"

# Async trait support
async-trait = "0.1"

# Observability — logging
loggix = "1.0.4"

# Observability — continuous profiling (Pyroscope / Grafana Cloud Profiles)
# Optional: only compiled when the `profiling` feature is enabled.
pyroscope         = { version = "0.5", optional = true }
pyroscope_pprofrs = { version = "0.2", optional = true }

# Observability — Prometheus metrics
prometheus = { version = "0.13", features = ["process"] }

# Observability — distributed tracing (OTLP → Grafana Tempo)
opentelemetry             = { version = "0.24", features = ["trace"] }
opentelemetry_sdk         = { version = "0.24", features = ["rt-tokio", "trace"] }
opentelemetry-otlp        = { version = "0.17", features = ["grpc-tonic", "http-proto", "reqwest-client", "trace"] }
opentelemetry-semantic-conventions = "0.16"
tracing                   = "0.1"
tracing-opentelemetry     = "0.25"
tracing-subscriber        = { version = "0.3", features = ["env-filter"] }

# Utilities
rand = "0.8"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"

# Input validation
validator = { version = "0.16", features = ["derive"] }

# Redis (async, auto-reconnecting connection manager)
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Utilities (bytes for NATS, url-encoding helpers)
bytes = "1"
futures-util = "0.3"
async-stream = "0.3"
serde_urlencoded = "0.7"
urlencoding = "2"

[profile.dev]
# Disable debug info in dev/test builds to cut per-rustc-process RSS by ~50%.
# Self-hosted CI runners OOM-kill rustc when debug info is enabled alongside
# heavy deps (pyroscope_pprofrs / pprof-rs / opentelemetry-otlp / reqwest).
debug = 0
# Reduce codegen parallelism per crate (default 256 → 4).
codegen-units = 16

[profile.test]
# Inherit from dev but also strip debug info from test harness binaries.
inherits = "dev"
debug = 0

[dev-dependencies]
# In-memory span exporter for tracing unit tests
opentelemetry_sdk = { version = "0.24", features = ["testing", "trace"] }
